# Booksmith

./: Makefile  Procfile  README.md  pyproject.toml  run_api.py  run_web.py
.github/workflows/: ci.yml
booksmith/: __init__.py  book.py  character.py  writing_agent.py
booksmith/api/: __init__.py  app.py  models.py  state.py
booksmith/backends/: __init__.py  base.py  factory.py  huggingface.py  mlx.py  openai.py
booksmith/generation/: __init__.py  agent.py  openai.py  parsers.py  prompts.py  schemas.py  validation.py
booksmith/models/: __init__.py  book.py  chapter.py  character.py
booksmith/utils/: __init__.py  auth.py  epub_generator.py  validators.py
notebooks/: book_generation.ipynb  test.py
tests/: conftest.py
tests/api/: test_app.py
tests/generation/: test_agent.py  test_openai.py  test_parsers.py  test_prompts.py  test_schemas.py  test_validation.py
tests/models/: test_book.py  test_chapter.py  test_character.py
tests/utils/: test_epub_generator.py  test_validators.py
web/: app.py  firebase.py
