[tool.poetry]
name = "booksmith"
version = "0.1.0"
description = "AI-powered book generation tool"
authors = ["João Caetano"]
readme = "README.md"
packages = [{include = "booksmith"}]

[tool.poetry.dependencies]
python = "^3.13"
openai = "^1.0.0"
python-dotenv = "^1.0.0"
ebooklib = "^0.18"
pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.25.0"
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 