[tool.poetry]
name = "booksmith"
version = "0.1.0"
description = "AI-powered book generation tool"
authors = ["João Caetano"]
readme = "README.md"
packages = [{include = "booksmith"}]

[tool.poetry.dependencies]
python = "^3.13"
openai = "^1.0.0"
python-dotenv = "^1.0.0"
ebooklib = "^0.18"
pydantic = {extras = ["email"], version = "^2.11.7"}
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
jinja2 = "^3.1.6"
firebase-admin = "^7.0.0"
httpx = "^0.28.1"
streamlit = "^1.47.1"
tqdm = "^4.66.0"
pyrebase4 = "^4.7.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.25.0"
pytest = "^8.0.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.5.0"
pytest-asyncio = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 